ATLAS-776: Service2Service Kommunikation lokal über Kafka handeln